gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/trait_loc_err.d
version https://git-lfs.github.com/spec/v1
oid sha256:4b598cc3c5b4f99ae820d0f3604f7772c8b61f7a90c25dd74efef0f1da070b01
size 402
